  - Other popup menus belonging to CFrame (or CMainFrame) are also now themed.
  - Functions which customise the appearance of the menus are now located
     in CFrame. They are easily overriden for a different visual effect.     
* The icons used in popup menu items can come from several bitmap resources.
  When an application has several toolbars in a rebar, for example, the icons 
  from each of these can be displayed in popup menus.     

The following changes have been made to the Win32++ code:
Added  CPropertySheet class
Added  CPropertyPage class
Added  CFrame::DrawCheckmark
Added  CFrame::DrawMenuItem
Added  CFrame::DrawMenuText
Added  CFrame::OnDrawItem
Added  CFrame::OnInitMenuPopup
Added  CFrame::OnMeasureItem
Added  CFrame::AddMenuIcon
Added  CFrame::AddMenuIcons
Added  CFrame::GetMenuTheme
Added  CFrame::SetMenuTheme
Added  CMDIFrame::GetActiveMDIChildCWnd
Added  CWnd::CenterWindow
Removed CDialog::Center    (use CWnd::CenterWindow instead)
Removed CMenubar::SetIcons (use CFrame::AddMenuIcons instead)
Moved   CWnd::GradientFill to GradientFill
Moved   CWnd::SolidFill    to SolidFill
Renamed ThemeMenubar       to ThemeMenu 
Renamed CMenubar::GetTheme to CMenubar::GetMenubarTheme
Renamed CMenubar::SetTheme to CMenubar::SetMenubarTheme
Renamed CRebar::GetTheme   to CRebar::GetRebarTheme
Renamed CRebar::SetTheme   to CRebar::SetRebarTheme
Renamed CToolbar::GetTheme to CToolbar::GetToolbarTheme
Renamed CToolbar::SetTheme to CToolbar::SetToolbarTheme


Version 5.5
-----------
Bugs Fixed:
* Visual Studio 6 (without a Platform SDK update) reports a 'TB_GETSTRING' 
  as an undeclared identifier.
* Dev-C++ reports a warning passing NULL used for non-pointer
* Threads sample, can generate an exception in release mode
* Performance sample, m_nTestWindows not initialised
* Corrected text layout for toolbar buttons with TBSYLE_DROPDOWN style.

New Features:
* Themes are now enabled by default. CFrame::SetTheme defines the default